<resources>
    <string name="app_name">My Scheduler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_email_template">Save email template</string>
    <string name="menu_sms_template">Save sms template</string>
    <string name="menu_import_email_contacts">Import email contacts</string>
    <string name="menu_import_sms_contacts">Import sms contacts</string>
    <string name="menu_schedule_email">Schedule email</string>
    <string name="menu_schedule_sms">Schedule sms</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_email_contact_list">Email contact list</string>
    <string name="menu_sms_contact_list">SMS contact list</string>
    <string name="menu_email_template_list">Email template list</string>
    <string name="menu_sms_template_list">SMS template list</string>
</resources>
